# AyoOS

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
boards/: rp2xxx_stamp_carrier_xl.h
scripts/: copy_uf2.py  copy_uf2.sh  monitor.py  serial_monitor.sh
src/: CMakeLists.txt  lv_conf.h  main.c
src/drivers/: CMakeLists.txt  lcd.c  lcd.h
